<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".PlayerDetailsActivity">
    <ImageView
            android:id="@+id/image_view_player"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:contentDescription="@string/image_view_content_description"
            android:layout_marginTop="30dp" />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_gravity="center"
            android:orientation="horizontal">
        <TextView
                android:id="@+id/text_view_label_name"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/text_view_label_name"
                android:textColor="@color/red"
                android:textSize="18sp"
                android:textStyle="bold" />
        <TextView
                android:id="@+id/text_view_player_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_gravity="center"
            android:orientation="horizontal">
        <TextView
                android:id="@+id/text_view_label_age"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/text_view_label_age"
                android:textColor="@color/red"
                android:textSize="18sp"
                android:textStyle="bold" />
        <TextView
                android:id="@+id/text_view_player_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_gravity="center"
            android:orientation="horizontal">
        <TextView
                android:id="@+id/text_view_label_country"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/text_view_label_country"
                android:textColor="@color/red"
                android:textSize="18sp"
                android:textStyle="bold" />
        <TextView
                android:id="@+id/text_view_player_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/text_view_label_position"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/text_view_label_position"
            android:textColor="@color/red"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/text_view_player_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>